--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,14 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     color: #212121;
+}
+
+.container {
+    display: block;
+    width: 1440px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
