--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,12 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 20px;
     color: #212121;
+    overflow-x: hidden;
 }
 
 .container {
     display: block;
-    width: 1440px;
+    width: 1400px;
     padding-right: 20px;
     padding-left: 20px;
     margin-left: auto;
