--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,5 +1,66 @@
 .formContainer {
-    display: flex;
-    justify-content: center;
+    width: 600px;
+    height: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 40px;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.inputContainer {
+    display: block;
+}
+
+.button {
+    cursor: pointer;
+    display: inline-block;
+    border: none;
+    min-width: 60px;
+    min-height: 44px;
+    padding: 9px 26px;
+    border-radius: 3px;
+    font-size: 16px;
+    background: rgb(29, 129, 253);
+    background: linear-gradient( 380deg, rgba(29, 129, 253, 1) 49%, rgba(251, 239, 26, 1) 50%);
+    font-weight: 800;
+    margin-left: 10px;
+    margin-top: 17px;
+}
+
+.input {
+    max-width: 190px;
+    min-height: 44px;
+    background-color: #0a0c164e;
+    border-radius: 0.5rem;
+    padding: 0 1rem;
+    border: 2px solid transparent;
+    font-size: 1rem;
+    transition: border-color 0.3s cubic-bezier(0.25, 0.01, 0.25, 1) 0s, color 0.3s cubic-bezier(0.25, 0.01, 0.25, 1) 0s, background 0.2s cubic-bezier(0.25, 0.01, 0.25, 1) 0s;
+}
+
+.label {
+    display: block;
+    margin-bottom: 3px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: #aeaeb099;
+    transition: color 0.3s cubic-bezier(0.25, 0.01, 0.25, 1) 0s;
+}
+
+.input:hover,
+.input:focus,
+.input-group:hover .input {
+    outline: none;
+    border-color: #05060f;
+}
+
+.input-group:hover .label,
+.input:focus {
+    color: #05060fc2;
 }
