--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,9 +4,15 @@
     box-shadow: 0 -6px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
+.navigationList {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .link {
     cursor: pointer;
-    color: #212121;
+    color: rgba(251, 239, 26, 1);
     text-decoration: none;
 }
 
@@ -17,4 +23,23 @@
 
 .link+.link {
     margin-left: 25px;
+}
+
+.ukraineContainer {
+    width: 230px;
+    display: flex;
+    align-items: center;
+}
+
+.ukraine {
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    background: linear-gradient( rgba(29, 129, 253, 1) 36%, rgba(251, 239, 26, 1) 67%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.heartLogo {
+    margin-left: 8px;
 }
