--- a/src/pages/MoviesPage/Movies.module.css
+++ b/src/pages/MoviesPage/Movies.module.css
@@ -7,15 +7,16 @@
 }
 
 .moviesList {
+    text-decoration: none;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 30px;
-    margin-top: 50px;
 }
 
 .movieCard {
+    cursor: pointer;
     display: block;
     min-width: 300px;
     min-height: 320px;
@@ -25,13 +26,19 @@
 }
 
 .movieCard:hover {
-    background-color: #0000009a;
+    background-color: #00000057;
     color: #fff;
 }
 
 .movieHeading {
+    text-decoration: none;
     text-align: center;
     margin-bottom: 10px;
+    color: rgba(29, 129, 253, 1);
+}
+
+.movieLink {
+    text-decoration: none;
 }
 
 .text {
