--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,14 @@ body {
     background-color: #403f3f;
 }
 
+a {
+    text-decoration: none;
+    color: rgba(29, 129, 253, 1);
+}
+
 .container {
     display: block;
-    width: 1400px;
+    max-width: 1400px;
     /* padding-right: 20px;
     padding-left: 20px; */
     margin-left: auto;
